syntax = "proto3";

package vaas.provider.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmos/evidence/v1beta1/evidence.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/lightclients/tendermint/v1/tendermint.proto";
import "vaas/v1/wire.proto";
import "tendermint/crypto/keys.proto";

option go_package = "github.com/allinbits/vaas/x/vaas/provider/types";

//
// Note any type defined in this file is ONLY used internally to the provider
// VAAS module. These schemas can change with proper consideration of
// compatibility or migration.
//

// Params defines the parameters for VAAS Provider module
message Params {
  ibc.lightclients.tendermint.v1.ClientState template_client = 1;
  // TrustingPeriodFraction is used to compute the consumer and provider IBC
  // client's TrustingPeriod from the chain defined UnbondingPeriod
  string trusting_period_fraction = 2;
  // Sent IBC packets will timeout after this duration
  google.protobuf.Duration vaas_timeout_period = 3
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];

  // The number of blocks that comprise an epoch.
  int64 blocks_per_epoch = 4;

  // The maximal number of validators that will be passed
  // to the consensus engine on the provider.
  int64 max_provider_consensus_validators = 5;

  // The fee charged per block for consumer chain operation.
  cosmos.base.v1beta1.Coin fees_per_block = 6 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (amino.encoding) = "legacy_coins",
    (amino.dont_omitempty) = true,
    (gogoproto.nullable) = false
  ];
}

// AddressList contains a list of consensus addresses
message AddressList { repeated bytes addresses = 1; }

// ValidatorSetChangePackets is a pb list of ccv.ValidatorSetChangePacketData.
message ValidatorSetChangePackets {
  repeated vaas.v1.ValidatorSetChangePacketData list = 1
      [ (gogoproto.nullable) = false ];
}

//
// Key assignment section
//

message KeyAssignmentReplacement {
  bytes provider_addr = 1;
  tendermint.crypto.PublicKey prev_c_key = 2;
  int64 power = 3;
}

// Used to serialize the ValidatorConsumerPubKey index from key assignment
// ValidatorConsumerPubKey: (chainID, providerAddr consAddr) -> consumerKey
// tmprotocrypto.PublicKey
message ValidatorConsumerPubKey {
  string chain_id = 1;
  bytes provider_addr = 2;
  tendermint.crypto.PublicKey consumer_key = 3;
}

// Used to serialize the ValidatorConsumerAddr index from key assignment
// ValidatorByConsumerAddr: (chainID, consumerAddr consAddr) -> providerAddr
// consAddr
message ValidatorByConsumerAddr {
  string chain_id = 1;
  bytes consumer_addr = 2;
  bytes provider_addr = 3;
}

// Used to serialize the ConsumerAddrsToPruneV2 index from key assignment
// ConsumerAddrsToPruneV2: (chainID, pruneTs time.Time) -> consumerAddrs
// AddressList
message ConsumerAddrsToPruneV2 {
  string chain_id = 1;
  google.protobuf.Timestamp prune_ts = 2
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  AddressList consumer_addrs = 3;
}

// ConsensusValidator is used to express a validator that
// should be validating on a chain.
// It contains relevant info for
// a validator that is expected to validate on
// either the provider or a consumer chain.
message ConsensusValidator {
  // validator's consensus address on the provider chain
  bytes provider_cons_addr = 1;
  // voting power the validator has during this epoch
  int64 power = 2;
  // public key the validator uses on the consumer chain during this epoch
  tendermint.crypto.PublicKey public_key = 3;
  // height the validator had when it FIRST became a consumer validator
  // If a validator becomes a consumer validator at height `H` and is
  // continuously a consumer validator for all the upcoming epochs, then the
  // height of the validator SHOULD remain `H`. This height only resets to a
  // different height if a validator stops being a consumer validator during an
  // epoch and later becomes again a consumer validator.
  int64 join_height = 4;
}

// ConsumerMetadata contains general information about the registered chain
message ConsumerMetadata {
  // the name of the chain
  string name = 1;
  // the description of the chain
  string description = 2;
  // the metadata (e.g., GitHub repository URL) of the chain
  string metadata = 3;
}

// ConsumerInitializationParameters are the parameters needed to launch a chain
message ConsumerInitializationParameters {
  // ---------- ---------- ----------
  // Following fields are used when the consumer chain launches and are not
  // needed by the provider afterwards.
  // ---------- ---------- ----------

  // the proposed initial height of new consumer chain.
  // For a completely new chain, this will be {0,1}. However, it may be
  // different if this is a chain that is converting to a consumer chain.
  ibc.core.client.v1.Height initial_height = 1 [ (gogoproto.nullable) = false ];
  // The hash of the consumer chain genesis state without the consumer VAAS
  // module genesis params. It is used for off-chain confirmation of
  // genesis.json validity by validators and other parties.
  bytes genesis_hash = 2;
  // The hash of the consumer chain binary that should be run by validators on
  // chain initialization. It is used for off-chain confirmation of binary
  // validity by validators and other parties.
  bytes binary_hash = 3;
  // spawn time is the time on the provider chain at which the consumer chain
  // genesis is finalized and all validators will be responsible for starting
  // their consumer chain validator node.
  google.protobuf.Timestamp spawn_time = 4
      [ (gogoproto.nullable) = false, (gogoproto.stdtime) = true ];
  // Unbonding period for the consumer,
  // which should be smaller than that of the provider in general.
  google.protobuf.Duration unbonding_period = 5
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];

  // ---------- ---------- ----------
  // Following fields are used to construct the consumer genesis of the
  // to-be-launched consumer chain and are set up as params on the consumer
  // chain. Those params can then be directly modified by the consumer chain.
  // ---------- ---------- ----------

  // Sent VAAS related IBC packets will timeout after this duration
  google.protobuf.Duration vaas_timeout_period = 6
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
  // The number of historical info entries to persist in store.
  // This param is a part of the cosmos sdk staking module. In the case of
  // a VAAS enabled consumer chain, the VAAS module acts as the staking module.
  int64 historical_entries = 7;
  // The ID of the connection end on the provider chain on top of which the VAAS
  // channel will be established. If connection_id == "", a new client of the
  // consumer chain and a new connection on top of this client are created.
  // Note that a standalone chain can transition to a consumer chain while
  // maintaining existing IBC channels to other chains by providing a valid
  // connection_id.
  string connection_id = 8;
}

// ConsumerIds contains consumer ids of chains
// Used so we can easily (de)serialize slices of strings
message ConsumerIds { repeated string ids = 1; }

// ConsumerPhase indicates the phases of a consumer chain according to ADR 019
enum ConsumerPhase {
  option (gogoproto.goproto_enum_prefix) = false;

  // UNSPECIFIED defines an empty phase.
  CONSUMER_PHASE_UNSPECIFIED = 0;
  // REGISTERED defines the phase in which a consumer chain has been assigned a
  // unique consumer id. A chain in this phase cannot yet launch.
  CONSUMER_PHASE_REGISTERED = 1;
  // INITIALIZED defines the phase in which a consumer chain has set all the
  // needed parameters to launch but has not yet launched (e.g., because the
  // `spawnTime` of the consumer chain has not yet been reached).
  CONSUMER_PHASE_INITIALIZED = 2;
  // LAUNCHED defines the phase in which a consumer chain is running and
  // consuming a subset of the validator set of the provider.
  CONSUMER_PHASE_LAUNCHED = 3;
  // STOPPED defines the phase in which a previously-launched chain has stopped.
  CONSUMER_PHASE_STOPPED = 4;
  // DELETED defines the phase in which the state of a stopped chain has been
  // deleted.
  CONSUMER_PHASE_DELETED = 5;
}

//
message InfractionParameters {
  SlashJailParameters double_sign = 1;
  SlashJailParameters downtime = 2;
}

//
message SlashJailParameters {
  bytes slash_fraction = 1 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  // for permanent jailing use 9223372036854775807 which is the largest value a
  // time.Duration can hold (approximately 292 years)
  google.protobuf.Duration jail_duration = 2
      [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
  // Indicates whether the validator should be tombstoned when slashed
  bool tombstone = 3;
}
